--- a/activity.css
+++ b/activity.css
@@ -1,43 +1,31 @@
-.hamburger:hover > div:nth-child(1){
-  background-color: ghostwhite;
-  animation-name: top;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
+
+body  {
+  font-family: 'Josefin Sans', sans-serif;
+  text-align: center;
 }
 
-.hamburger:hover > div:nth-child(2){
-  animation-name: middle;
-  animation-duration: .1s;
-  animation-fill-mode: forwards;
+.caption {
+  width: 80%;
+  margin: auto;
+  overflow: hidden;
 }
 
-.hamburger:hover > div:nth-child(3){
-  background-color: ghostwhite;
-  animation-name: bottom;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
+img {
+  width: 80%;
 }
 
-nav {
-  opacity: 0;
-  transition-duration: 1s;
+button {
+  padding: 1em;
+  margin: .2em;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 1.5em;
+  color: ghostwhite
+  transition-duration: 2s;
+  
 }
 
-.hamburger:hover ~ nav {
-  opacity: 1;
-}
-
-@keyframes top {
- from{transform: rotate(0deg);}
-
-  to{transform: rotate(-45deg);}
-}
-@keyframes middle {
-  from {opacity: 1;}
-  to {opacity: 0;}
-}
-
-@keyframes bottom {
-  from {transform: rotate(0deg);}
-  to {transform: rotate(45deg);}
-}
+button:hover {
+    transition-duration: 2s;
+  background-color: cornflowerblue;
+}  
