--- a/transition-activity/activity.css
+++ b/transition-activity/activity.css
@@ -1,1 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
 
+body  {
+  font-family: 'Josefin Sans', sans-serif;
+  text-align: center;
+}
+
+.caption {
+  width: 80%;
+  margin: auto;
+  overflow: hidden;
+}
+
+img {
+  width: 80%;
+}
+
+button {
+  padding: 1em;
+  margin: .2em;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 1.5em;
+  color: ghostwhite
+  transition-duration: 2s;
+  
+}
+
+button:hover {
+    transition-duration: 2s;
+  background-color: cornflowerblue;
+}  
