--- a/animation-activity/activity.css
+++ b/animation-activity/activity.css
@@ -1,89 +1,32 @@
-<<<<<<< HEAD
-.hamburger:hover > div:nth-child(1){
-  background-color: ghostwhite;
-  animation-name: top;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
+.container {
+  display: flex;
+  align-items: center;
 }
 
-.hamburger:hover > div:nth-child(2){
-  animation-name: middle;
-  animation-duration: .1s;
-  animation-fill-mode: forwards;
+.hamburger {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
 }
 
-.hamburger:hover > div:nth-child(3){
-  background-color: ghostwhite;
-  animation-name: bottom;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
+.hamburger div {
+  width: 100%;
+  height: 3px;
+  background-color: black;
+  transition: transform 0.3s;
 }
 
-nav {
+.hamburger:hover #top {
+  transform: translateY(6px) rotate(45deg);
+}
+
+.hamburger:hover #middle {
   opacity: 0;
-  transition-duration: 1s;
 }
 
-.hamburger:hover ~ nav {
-  opacity: 1;
+.hamburger:hover #bottom {
+  transform: translateY(-6px) rotate(-45deg);
 }
-
-@keyframes top {
- from{transform: rotate(0deg);}
-
-  to{transform: rotate(-45deg);}
-}
-@keyframes middle {
-  from {opacity: 1;}
-  to {opacity: 0;}
-}
-
-@keyframes bottom {
-  from {transform: rotate(0deg);}
-  to {transform: rotate(45deg);}
-}
-=======
-.hamburger:hover > div:nth-child(1){
-  background-color: ghostwhite;
-  animation-name: top;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-}
-
-.hamburger:hover > div:nth-child(2){
-  animation-name: middle;
-  animation-duration: .1s;
-  animation-fill-mode: forwards;
-}
-
-.hamburger:hover > div:nth-child(3){
-  background-color: ghostwhite;
-  animation-name: bottom;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-}
-
-nav {
-  opacity: 0;
-  transition-duration: 1s;
-}
-
-.hamburger:hover ~ nav {
-  opacity: 1;
-}
-
-@keyframes top {
- from{transform: rotate(0deg);}
-
-  to{transform: rotate(-45deg);}
-}
-@keyframes middle {
-  from {opacity: 1;}
-  to {opacity: 0;}
-}
-
-@keyframes bottom {
-  from {transform: rotate(0deg);}
-  to {transform: rotate(45deg);}
-}
->>>>>>> 049c99e4ab18cf79a76f20189430cb8bd29de4cf
