--- a/transform-activity/activity.css
+++ b/transform-activity/activity.css
@@ -7,7 +7,7 @@ main {
       text-align: right;
     }
     main {
-      background-color: mediumaquamarine;
+      background-color: darkaquamarine;
       height: 90vh;
       width: 100vh;
       margin: auto;
