--- a/transition-activity/activity.css
+++ b/transition-activity/activity.css
@@ -20,7 +20,7 @@ button {
   margin: .2em;
   font-family: 'Josefin Sans', sans-serif;
   font-size: 1.5em;
-  color: ghostwhite
+  color: parchment;
   transition-duration: 2s;
   
 }
